# resource-monitor

./: LICENSE  README.md
dashboard/: Cargo.toml
dashboard/src/: app.rs  args.rs  main.rs  requests.rs  resources.rs  server.rs  serverlist.rs  terminal.rs  ui.rs  util.rs
resource-monitor/: Cargo.toml
resource-monitor/src/: args.rs  main.rs  resources.rs
