[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
ratatui = { version = "0.23.1-alpha.5", features = ["all-widgets"] }
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.32.0", features = ["full"] }
clap = {version = "4.4.6", features = ["derive"]}
