[package]
name = "resource-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.29.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.6.19"
tokio = { version = "1.29.1", features = ["full"] }
clap = {version = "4.2.7", features = ["derive"]}
